work on todo server side
